tests/negative/module/doesnt_contain.orng
// doesnt_contain.orng:7:34: error: member `The_Type` not in module: `module::doesnt_contain`
// const x: doesnt_contain::The_Type
//                                 ^
// 
import doesnt_contain

const x: doesnt_contain::The_Type